# roofline

./: .gitignore  README.md  pyproject.toml
roofline/: __init__.py  classifier.py  data.py  model.py  train.py
scripts/: render_results.py  show_augmentations.py  visual_test.py
tests/: test_classifier.py  test_model.py
